# WhatToEat

./: .gitignore  CLAUDE.md  SPEC.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.claude/agents/: image-content-extractor.md
.githooks/: post-commit  pre-commit
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/data/: dishes.ts  restaurants.ts  weeklyMenu.json  weeklyMenu.ts
src/pages/: HistoryPage.tsx  HomePage.tsx  PreferencesPage.tsx
src/services/: history.ts  recommendation.ts  restaurantRecommendation.ts  storage.ts
src/types/: index.ts
