[package]
name = "what-to-eat"
version = "1.0.0"
description = "每日食谱推荐应用"
authors = ["you"]
edition = "2021"

[lib]
name = "what_to_eat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
